[gd_scene load_steps=2 format=2]

[ext_resource path="res://Rooms/StartScreen.gd" type="Script" id=1]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 130.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 34.0
text = "Title"

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 50.0
margin_right = 122.0
margin_bottom = 118.0
alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenu"]
margin_top = 12.0
margin_right = 82.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../QuitButton")
text = "New Game"

[node name="ContinueButton" type="Button" parent="MainMenu"]
visible = false
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Continue"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_top = 36.0
margin_right = 82.0
margin_bottom = 56.0
focus_neighbour_bottom = NodePath("../NewGameButton")
text = "Quit"

[connection signal="pressed" from="MainMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MainMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
